# movies_django

./: README.md  manage.py  pyproject.toml
films/: settings.py  urls.py
films/films/: settings.py  urls.py
films/movies/: urls.py
kinosearch/films/: settings.py
kinosearch/movies/: models.py  views.py
movies/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_alter_film_rating.py  0003_remove_film_short_description_film_created_and_more.py  0004_alter_film_rating.py  0005_alter_film_rating.py  0006_alter_film_rating.py
movies/templates/: film_search.html
movies/templates/movies/: film_confirm_delete.html  film_detail.html  film_filter.html  film_form.html  film_list.html
