[tool.poetry]
name = "movies-django"
version = "0.1.0"
description = ""
authors = ["edwa1401 <edwa14011977@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.0.292"
mypy = "^1.5.1"
pytest = "^7.4.2"
django = "^4.2.5"
ipython = "^8.16.1"
django-extensions = "^3.2.3"
django-stubs = "^4.2.4"
pillow = "^10.0.1"
django-filter = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ['mypy_django_plugin.main']
ignore_missing_imports = false
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = '''(?x) (env\.|^migrations\.|^manage\.py$|^tests\.py$)'''

[[tool.mypy.overrides]]
module = 'films.settings'
disable_error_code = 'var-annotated'


[[tool.mypy.overrides]]
module = "django_extensions.*"
ignore_missing_imports = true


[tool.django-stubs]
django_settings_module = 'films.settings'


[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
    "settings.py",
    ]

per-file-ignores = {}

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11
target-version = 'py311'

